--- a/app/assets/stylesheets/v2/projects.scss
+++ b/app/assets/stylesheets/v2/projects.scss
@@ -6,10 +6,13 @@
   justify-content: space-between;
   padding: 0 1em;
 
+  .project-link {
+    margin-bottom: 3em;
+  }
+
   .project {
     background: center/cover;
     color: white;
-    margin-bottom: 3em;
     text-shadow: 0 0 0.3em rgba(0,0,0,0.6);
 
     // height: 22.5vw; width: 40vw;
@@ -35,6 +38,11 @@
 
     &:hover .project-title {
       opacity: 1;
+    }
+
+    @include mobile {
+      width: calc(100vw - 2em);
+      height: calc((100vw - 2em)*9/16);
     }
   }
 }
