--- a/app/views/v1/pages/resume.html.erb
+++ b/app/views/v1/pages/resume.html.erb
@@ -1,7 +1,7 @@
 <p>
-  Download Resumé:
-  <a href="/resume_cruz_nunez.pdf" download>PDF</a> |
-  <a href="/resume_cruz_nunez.docx" download>DOCX</a>
+  View Resumé as:
+  <a href="/cruz_nunez_resume.jpg" target="_blank">JPG</a>,
+  <a href="/cruz_nunez_resume.pdf" target="_blank">PDF</a>
 </p>
-<%= image_tag 'resume_1.jpg', class: 'resume' %>
-<%= image_tag 'resume_2.jpg', class: 'resume' %>
+
+<%= image_tag '/cruz_nunez_resume.jpg', class: 'resume' %>
