--- a/app/views/v2/pages/resume.html.erb
+++ b/app/views/v2/pages/resume.html.erb
@@ -1,7 +1,20 @@
-<p>
-  Download Resumé:
-  <a href="resume_cruz_nunez.pdf" download>PDF</a> |
-  <a href="resume_cruz_nunez.docx" download>DOCX</a>
-</p>
-<%= image_tag 'resume_1.jpg', class: 'resume' %>
-<%= image_tag 'resume_2.jpg', class: 'resume' %>
+<a href="/v2">
+  <div class="wtf">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+</a>
+
+<div class="slide-3" style="background-image: url('/cruz_nunez_resume.jpg')">
+</div>
+
+<div class="slide-divider">
+  <h1>Resumé</h1>
+
+  <p>
+    Download Resumé:
+    <a href="/cruz_nunez_resume.jpg" target="_blank">JPG</a>,
+    <a href="/cruz_nunez_resume.pdf" target="_blank">PDF</a>
+  </p>
+</div>
