--- a/app/views/v2/projects/index.html.erb
+++ b/app/views/v2/projects/index.html.erb
@@ -20,7 +20,7 @@
 
   <div class="projects-container">
     <% @projects.each do |project| %>
-      <%= link_to v2_project_path(project) do %>
+      <%= link_to v2_project_path(project), class: 'project-link' do %>
         <div class="project" style="background-image: url(<%= project.image.link %>)">
           <div class="project-title"><%= project.name %></div>
         </div>
