--- a/app/assets/stylesheets/v2/home.scss
+++ b/app/assets/stylesheets/v2/home.scss
@@ -38,6 +38,16 @@
     background: center/cover;
   }
 }
+.slide-3 {
+  background: center/contain no-repeat;
+  background-color: black;
+  box-shadow: inset 0 1em 10em rgba(0,0,0,0.7);
+  height: 70vh;
+  width: 100%;
+  @include mobile {
+    background: center/cover;
+  }
+}
 
 // Somewhat important stuff
 
@@ -52,8 +62,7 @@
   justify-content: center;
   align-items: center;
   h1 {
-    font-size: 8vw;
-    // font-size: 8vmax;
+    font-size: 8vmax;
     margin: 0 0 .68em 0;
     text-shadow: 0 0 0.25em black;
   }
