--- a/app/views/v2/projects/show.html.erb
+++ b/app/views/v2/projects/show.html.erb
@@ -1,3 +1,11 @@
+<a href="/v2">
+  <div class="wtf">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+</a>
+
 <div class="slide-2" style="background-image: url(<%= @project.image.link %>)">
 </div>
 
