add accents to last name on v1/home.html

--- a/app/views/v1/pages/home.html.erb
+++ b/app/views/v1/pages/home.html.erb
@@ -4,5 +4,5 @@
 <h3>About</h3>
 
 <p>
-  Hello, I'm Cruz Nunez. I'm a full-stack web developer working for Code the Dream. I love to create living, breathing websites that fill the needs around me. Feel free to contact me with questions or ideas that we can work on together.
+  Hello, I'm Cruz Núñez. I'm a full-stack web developer working for Code the Dream. I love to create living, breathing websites that fill the needs around me. Feel free to contact me with questions or ideas that we can work on together.
 </p>
