--- a/app/views/v2/projects/show.html.erb
+++ b/app/views/v2/projects/show.html.erb
@@ -31,5 +31,5 @@
   </p>
 
   <%= link_to 'Edit', edit_v2_project_path(@project) %> |
-  <%= link_to 'Back', v2_root_path %>
+  <%= link_to 'Back', v2_projects_path %>
 </div>
