update v1 home page image

--- a/app/views/v1/pages/home.html.erb
+++ b/app/views/v1/pages/home.html.erb
@@ -1,5 +1,6 @@
 <%#= image_tag 'cruz.jpg', id: "self" %>
-<%= image_tag '5landscapecolor.jpg', id: "self" %>
+<%#= image_tag '5landscapecolor.jpg', id: "self" %>
+<%= image_tag 'IMG_3210-lr1-1440p.jpg', id: "self" %>
 
 <h3>About</h3>
 
